k8/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: marketing-project
  labels:
    name: marketing-project
    environment: production
