k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: marketing-project
  labels:
    app: marketing-project
spec:
  selector:
    app: marketing-project
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
